# Utilities

./: Dockerfile  Inv_kin_franka.py  README.md  ROS2 notes.md  Some useful commands  StrawberryDetection.py  colli_chk_franka.py  control_LQR.m  demo_promp.launch  detection_results.bag  detection_results2.bag  dhPlotter.py  dh_plotter.m  gripper_move.py  guiTest.cpp  inv_cloak.py  moveRobot_backNforth.py  navigation_2d.yaml  numerical_gradient_check.m  overtaking.py  panda_arm.urdf  pinocchio_test.py  plots_remove_type3_fonts_IEEE.py  pointcloud_as_obstacle.py  protect_loop.py  python_publisher_subsciber.py  requirements_for_conda_env_Jetson.txt  ros_opencv_obj_detection.py  rosbag_filter.py  shadow.py  space_7DoF_arm.py  spec-file.txt  statetrans.m  test.cpp  time_jumper.py  time_lapse.py  widget.py
C++/: CMakeLists.txt  ReadMe.md  eigen.cpp  eigenT
bayes_people_tracker/cmake/: bayes_people_tracker-msg-extras.cmake  bayes_people_tracker-msg-paths.cmake  bayes_people_trackerConfig.cmake
bayes_people_tracker/config/: detectors_simulation.yaml
docker_deployment/: Dockerfile  auto_deploy.sh  deply_to_ghcr_ros2.yml  docker_startup.sh  startup.sh
docs/: Gemfile  _config.yml  about.md  blog.html  index.html  package-lock.json
mortgage/: main.cpp  mortgage.pro  widget.cpp  widget.h  widget.ui
ros2_ws/: README.md
ros2image-pkg/: README.MD  pyproject.toml  requirements.txt  test.yaml
ros2image-pkg/ros2image/: ros2image-entrypoint.py  ros2image_entrypoint.py
ros2image-pkg/ros2image/utils/: process_images.py
ros2image-pkg/ros2image/utils/bag/: convert.py
(+92 files in other folders)
