[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2image"  # name and version is a must
version = "0.0.1"
authors = [
  { name="Ash Babu", email="ash.babu@headlight.ai" },
]
description = "Package to convert rosbags to hdfs and images"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
ros2image = "ros2image.ros2image_entrypoint:main"  # any-name = package-name.module.function

[tool.setuptools.packages.find]
include = ["ros2image*"]
namespaces = false